Fix form overflow on mobile

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -21,6 +21,7 @@
   input,
   textarea {
     // outline: 1px solid green;
+    max-width: 100%;
     font-size: 18px;
     display: block;    
     margin-top: 0.15rem;
